# opencode-sse

./: Cargo.toml  mark.down
doc/: design.md  example_design.md
docs/: example-improvement.md  sse-keepalive-optimization.md
src/: lib.rs
src/types/: client.rs  mod.rs  types.rs
sse_parser/: Cargo.toml
sse_parser/src/: lib.rs
tests/: integration.rs
