[package]
name = "opencode-api"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "query"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
oas3-gen-support = { version = "0.25.3", features = ["reqwest", "eventsource"] }
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.12.3"
serde_with = "3.18.0"
http = "1.4.0"
#[features]
#default = []
#prod = ["custom-utils/prod"]
